@@ -159,6 +159,8 @@ $;TMHMM_EXEC$;=/usr/local/bin/tmhmm
 
 [component train_for_glimmer3_iteration]
 
+[component translate_sequence]
+$;TRANSEQ_EXEC$;=/usr/local/packages/EMBOSS/bin/transeq
 
 [component trf]
 $;TRF_EXEC$;=/usr/local/bin/trf
