@@ -11,6 +11,7 @@ $;TABLE$;=0
 $;FRAME$;=1
 ;; optional sequence regions to translate (eg: 10-165,200-325,360-450)
 $;REGIONS$;=
+;; used in the base name in all new features IDs generated
 $;PROJECT_NAME$;=$;PROJECT$;
 
 [input]
