@@ -596,8 +596,12 @@ next
 -bugfix: tmhmm component wasn't actually passing OTHER_OPTS variable
 -bugfix: tmhmm2bsml was failing when html anchors in output were commented out by tmhmm
 -bugfix: ps_scan component how handles multi-fasta input files correctly
+-changed glimmer3 to read executable paths from software.config
+-translate_sequence: removed hard-coded paths, eliminated sh wrapper
 -fixed sf.net bug 1843655: save_component.cgi was failing on values containing + symbol
 -standardized the perl path to /usr/bin/perl in ergatis/src/perl (though they're mostly run by wrappers anyway)
 -brought default project.config inline with ergatis.ini default values
 -made PROJECT_CODE optional, can now omit value
 -bugfix: create_iterator_list.pl was using Workflow::Logger instead of Ergatis::Logger
+-changed glimmer3 to read executable paths from software.config
+-translate_sequence: removed hard-coded paths, eliminated sh wrapper
